updating to mobile version

--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
         <img src="./assets/carna_logo.png" alt="">
       </a>
     </nav>
-    <!-- <img src="./assets/FUNDO.jpg" alt=""> -->
   </header>
   <section>
-    <img src="./assets/test.png" alt="">
+    <img src="./assets/test.png" alt="" class="carousel__img">
     <div class="text__centered">E vamos com muita, Furia!</div>
   </section>
   <main>
